@@ -525,6 +525,7 @@ CATEGORIES :
       EXAMPLES:
       - CODE   : ex_cpp_dyn_view_minimum
         DESCR  :
+
 - Dump:
   METHODS:
   - g_dyn_view_to_json:
@@ -550,13 +551,16 @@ CATEGORIES :
       EXAMPLES:
       - CODE   : ex_cpp_dyn_view_to_json
         DESCR  :
+
+  - g_dyn_view_to_string_2:
+      IGNORE   : ""
   - g_dyn_view_to_string:
       NAME     : to_string
       SUMMARY  : &g_dyn_view_to_string_summary
                  Convert view to a string.
       DESCR    : &g_dyn_view_to_string_descr
-                 This method will convert a view and its columns and rows to a format
-                 which is easily read by humans.
+                 This method will convert a view and its columns and rows to a
+                 human readable format.
       CONST    : true
       PARAMS:
       - NAME   : out
@@ -566,6 +570,26 @@ CATEGORIES :
       - NAME   : limit
         TYPES  : size_t
         DESCR  : "The number of rows to convert. Default: 500."
+      EXAMPLES:
+      - CODE   : ex_cpp_dyn_view_to_string
+        DESCR  :
+
+  - g_dyn_view_row_to_string:
+      NAME     : row_to_string
+      SUMMARY  : &g_dyn_view_row_to_string_summary
+                 Convert a row to a string.
+      DESCR    : &g_dyn_view_row_to_string_descr
+                 This method will convert a specified row to a
+                 human readable format.
+      CONST    : true
+      PARAMS:
+      - NAME   : row_ndx
+        TYPES  : std::size_t
+        DESCR  : &g_dyn_view_row_to_string_parm1_descr
+                 The index of the row to convert.
+      - NAME   : out
+        TYPES  : std::ostream&
+        DESCR  : *g_dyn_view_to_string_parm1_descr
       EXAMPLES:
       - CODE   : ex_cpp_dyn_view_to_string
         DESCR  :
