@@ -427,13 +427,14 @@ CATEGORIES :
       EXAMPLES:
       - CODE   : ex_cpp_typed_view_to_json
         DESCR  :
+  
   - g_typed_view_to_string:
       NAME     : to_string
       SUMMARY  : &g_typed_view_to_string_summary
                  Convert view to a string.
       DESCR    : &g_typed_view_to_string_descr
-                 This method will convert a view and its columns and rows to a format
-                 which is easily read by humans.
+                 This method will convert a view and its columns and rows
+                 to a human readable format.
       CONST    : true
       PARAMS:
       - NAME   : out
@@ -444,6 +445,26 @@ CATEGORIES :
         TYPES  : size_t
         DESCR  : &g_typed_view_to_string_parm2_descr
                  "The number of rows to convert. Default: 500."
+      EXAMPLES:
+      - CODE   : ex_cpp_typed_view_to_string
+        DESCR  :
+
+  - g_typed_view_row_to_string:
+      NAME     : row_to_string
+      SUMMARY  : &g_typed_view_row_to_string_summary
+                 Convert a row to a string.
+      DESCR    : &g_typed_view_row_to_string_descr
+                 This method will convert a specified row to a
+                 human readable format.
+      CONST    : true
+      PARAMS:
+      - NAME   : row_ndx
+        TYPES  : std::size_t
+        DESCR  : &g_typed_view_row_to_string_parm1_descr
+                 The index of the row to convert.
+      - NAME   : out
+        TYPES  : std::ostream&
+        DESCR  : *g_typed_view_to_string_parm1_descr
       EXAMPLES:
       - CODE   : ex_cpp_typed_view_to_string
         DESCR  :
