@@ -12,6 +12,9 @@ Format:
 
 ==================
 
+2013-09-12 (Brian Munkholm)
++ Added TableView::row_to_string() and testcases for to_string() and row_to_string()
++ Added row_to_string(), to_string() and to_json() in typed TableView.
 
 2013-08-31 (Kristian Spangsege)
 + Database files are now exanded by doubling the size until it reaches 128 MiB. After that, it is expanded in chunks of 128 MiB. Until now, it was always expanded in chunks of 1 MiB.
@@ -23,7 +26,7 @@ Format:
 
 2013-08-23 (Kristian Spangsege)
 + Stop throwing from destructors (all), and from SharedGroup::rollback() and SharedGRoup::end_read().
-+ General stability and eror checking improvements.
++ General stability and error checking improvements.
 ! Fixed many bugs relating to Group::commit().
 ! Fixed some bugs relating to SharedGroup::commit().
 ! Fixed bug in TableViewBase::sort().
